syntax = "proto3";

option go_package = "github.com/yash-gadgil/glyph/protogen/golang/auth";

service AuthService {

    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc OAuthURL(OAuthURLRequest) returns (OAuthURLResponse) {}
    rpc OAuthCallback(OAuthCallbackRequest) returns (OAuthCallbackResponse) {}
    rpc VerifyEmail(EmailVerificationRequest) returns (EmailVerificationResponse) {}
    rpc VerifyToken(VerificationRequest) returns (VerificationResponse) {}
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    string userID = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

message OAuthURLRequest {
    string provider = 1;
    string state = 2;
}

message OAuthURLResponse {
    string url = 1;
}

message OAuthCallbackRequest {
    string provider = 1;
    string code = 2;
    string state = 3;
}

message OAuthCallbackResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

message EmailVerificationRequest {
    string token = 1;
}

message EmailVerificationResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

message VerificationRequest {
    string token = 1;
}

message VerificationResponse {
    string userID = 1;
}

